--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,22 @@ nginx:
   volumes:
     - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
     - ./nginx/services.d:/etc/nginx/services.d:ro
-    - ./nginx/snake-oil-server.crt:/etc/nginx/server.crt:ro
-    - ./nginx/snake-oil-server.key:/etc/nginx/server.key:ro
+    - ./nginx/server.crt:/etc/nginx/server.crt:ro
+    - ./nginx/server.key:/etc/nginx/server.key:ro
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
-    - ./gene.iobio:/usr/share/nginx/gene.iobio:ro
     - ./data-vol/local_cache:/usr/share/nginx/local_cache:ro
-    - /mnt/gene-data:/usr/share/nginx/data:ro
   links:
     - geneinfo
     - gene2pheno
     - genomebuild
     - hpo
     - coverage
+    - bambinner
+    - bamreaddepther
+    - bamstatsalive
+    - vcfstatsalive
+    - genecoverage
+    - knownvariants
     - od_samtools
     - samtools
     - bcftools
@@ -30,7 +34,6 @@ nginx:
     - af
     - vep
     - phenolyzer
-    - email
 
 geneinfo:
   image: qiaoy/iobio.geneinfo:v2.3.1
@@ -53,15 +56,39 @@ hpo:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
     - ./data-vol/hpo:/home/iobio/workdir/hpo:ro
 coverage:
-  image: qiaoy/iobio.coverage:v2.3
+  image: qiaoy/iobio.coverage:v2.4
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+bambinner:
+  image: qiaoy/iobio.bambinner:v2.3
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+bamreaddepther:
+  image: qiaoy/iobio.bamreaddepther:v2.4
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+bamstatsalive:
+  image: qiaoy/iobio.bamstatsalive:v2.3
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+vcfstatsalive:
+  image: qiaoy/iobio.vcfstatsalive:v2.4
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+genecoverage:
+  image: qiaoy/iobio.genecoverage:v2.3
+  volumes:
+    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
+knownvariants:
+  image: qiaoy/iobio.knownvariants:v2.3
   volumes:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
 od_samtools:
-  image: qiaoy/iobio.samtools_od:v2.3.3
+  image: qiaoy/iobio.samtools_od:v2.3.4
   volumes:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
 samtools:
-  image: qiaoy/iobio.samtools:v2.3.1
+  image: qiaoy/iobio.samtools:v2.3.3
   volumes:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
 bcftools:
@@ -100,7 +127,7 @@ af:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
     - ./data-vol/afdata:/home/iobio/workdir/afdata:ro
 vep:
-  image: qiaoy/iobio.vep:v2.4
+  image: qiaoy/iobio.vep:v2.4.1
   volumes:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
     - ./data-vol/vep-cache:/home/iobio/workdir/vep-cache:ro
@@ -109,8 +136,3 @@ phenolyzer:
   image: qiaoy/iobio.phenolyzer:v2.3
   volumes:
     - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
-email:
-  image: qiaoy/iobio.email-server
-  volumes:
-    - ./ca-certificates.crt:/etc/ssl/certs/ca-certificates.crt:ro
-    - ./emailServer.ini:/home/iobio/workdir/emailServer.ini:ro
